Fixed tables visibility in tab content.

--- a/modules/custom/ckeditor_bootstrap_tabs/bootstrap_tabs/plugin/additional.css
+++ b/modules/custom/ckeditor_bootstrap_tabs/bootstrap_tabs/plugin/additional.css
@@ -71,3 +71,11 @@
 .tab-content > .active {
     display: block;
 }
+
+.tab-content table,
+.tab-content table td {
+    border: 1px solid #999
+}
+.tab-content table th {
+    border: 1px solid #999
+}
